<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical"
       android:layout_marginTop="150dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginBottom="150dp"
            android:textSize="40dp"
            android:textStyle="bold"
            android:text="@string/pregunta_origen"
            android:id="@+id/pregunta_origen"
            android:textColor="@color/preguntas" />

       <EditText
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
           android:textSize="20dp"
           android:textStyle="italic"
           android:textColor="@color/hint"
           android:text="@string/hint_origen"
           android:gravity="center"
           android:ems="10"
           android:id="@+id/hint_textarea"
           android:background="@color/fondo"/>

       <View
           android:layout_width="fill_parent"
           android:layout_height="1px"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"
           android:layout_marginTop="15dp"
           android:background="@color/azul"/>

       <TextView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp"
           android:padding="10dp"
           android:gravity="center"
           android:textSize="20dp"
           android:text="@string/reminder1"
           android:id="@+id/reminder1"
           android:textColor="@color/preguntas" />

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:gravity="center">

           <Button
               android:layout_width="180dp"
               android:layout_height="60dp"
               android:textSize="22dp"
               android:textColor="@color/blanco"
               android:background="@color/azul"
               android:layout_marginRight="20dp"
               android:text="@string/anterior"/>

           <Button
               android:layout_width="180dp"
               android:layout_height="60dp"
               android:textSize="22dp"
               android:textColor="@color/blanco"
               android:layout_marginLeft="20dp"
               android:background="@color/azul"
               android:text="@string/siguiente"/>

           </LinearLayout>



   </LinearLayout>



</LinearLayout>