<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="User_name"
                android:gravity="center"
                android:textSize="40dp"
                android:textStyle="bold"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"/>

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/cedula"
                android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/preguntas"
            />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                />

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/licencia"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/preguntas"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                />

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/placa"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/preguntas"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                />

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/modelo"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/preguntas"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                />

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/entidad"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/preguntas"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="123456789"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"
                />

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/comentario"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/preguntas"
                />

        </LinearLayout>

        </ScrollView>


</LinearLayout>