<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hacari.easypacks.RegistrarViaje">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:background="#42009700"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/regV_Volumen"
                android:id="@+id/textView7"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtVolumen"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/regV_FechaSalida"
                android:id="@+id/textView9"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dtPick"
                android:datePickerMode="spinner"
                android:calendarTextColor="#971aff00"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viajes_btn_crear"
                android:id="@+id/button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#5d0057b5"
                android:backgroundTint="#5d0057b5"
                android:ellipsize="marquee"
                android:textColor="#ff007000"
                android:textColorHighlight="#5b0057b5"
                android:onClick="click_crearViaje"
                android:enabled="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>