<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="hacari.easypacks.Viajes">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#42009700"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/viajes_titulo"
            android:id="@+id/textView3"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:textColor="#ff007000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtPlaca"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/Layou2"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/viajes_titulo_crear"
            android:id="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ff007000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viajes_btn_crear"
            android:id="@+id/btn_crear"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#5d0057b5"
            android:backgroundTint="#5d0057b5"
            android:ellipsize="marquee"
            android:textColor="#ff007000"
            android:textColorHighlight="#5b0057b5"
            android:onClick="click_crearViaje"
            android:enabled="true" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lst_Viajes"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="10dp"
        android:background="#f758972c"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/Layou2"/>

</RelativeLayout>
